# Rice-xwitch-comment-viewer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.devcontainer/: Dockerfile  README.md  codex-state-transfer.sh  devcontainer-lock.json  devcontainer.json  setup.sh
.github/workflows/: release-windows.yml
docs/: 01-requirements-and-decisions.md  02-architecture.md  03-twitch-ingestion.md  04-speech-output.md  05-ui-ux.md  06-implementation-roadmap.md  README.md  RESEARCH_NOTES.md  TODO.md  releasing.md
scripts/: build-windows-docker.sh  publish-release.sh  verify-release-tag.sh
skills/release-rice/: SKILL.md
skills/release-rice/agents/: openai.yaml
src/: App.tsx  main.tsx  routes.ts  startupAuth.test.ts  startupAuth.ts  styles.css  types.ts  validation.test.ts  validation.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app_events/: mod.rs
src-tauri/src/launcher/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/speech/: mod.rs
src-tauri/src/speech/bouyomi/: mod.rs
src-tauri/src/twitch/: mod.rs
src-tauri/src/twitch/fixtures/: channel_chat_message.json
src/components/: ActivityBar.tsx  MainView.tsx  SettingsFormControls.tsx  SidePanel.tsx  StatusBar.test.ts  StatusBar.tsx  TitleBar.tsx
src/features/auth/: AuthView.tsx
src/features/chat/: ChatView.tsx
src/features/filter/: FilterView.tsx
src/features/launcher/: LauncherView.tsx
src/features/logs/: LogsView.tsx
src/features/queue/: QueueView.tsx
src/features/settings/: SettingsView.tsx  defaults.ts
src/hooks/: useDisplayScale.ts
src/presentation/: chat.test.ts  chat.ts  launcher.test.ts  launcher.ts  queue.test.ts  queue.ts  startupGuide.test.ts  startupGuide.ts
src/stores/: appStore.test.ts  appStore.ts
src/tauri/: client.ts
