[package]
name = "rice"
version = "0.1.2"
description = "Twitch chat TTS desktop app"
authors = ["rice"]
edition = "2021"

[lib]
name = "rice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri = { version = "2.0.0", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
thiserror = "1.0"
tokio = { version = "1.41", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
keyring = { version = "3.6", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["windows-native"] }

[features]
default = ["app"]
app = ["dep:tauri", "dep:tauri-plugin-dialog", "custom-protocol"]
custom-protocol = ["tauri?/custom-protocol"]
